# rust_and_mongodb

./: .gitignore  Cargo.toml  README.md
extra/: review.py  sample_records.py  scrape.py
extra/recipes/: espresso_martini.json  manhattan.json  negroni_sbagliato.json  old_fashioned.json
src/: main.rs
src/data/: mod.rs
